tests/ui/impl-restriction/recover-incorrect-impl-restriction.with_gate.stderr
error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:8:14
   |
LL |     pub impl(crate::foo) trait Baz {}
   |              ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub impl(in crate::foo) trait Baz {}
   |              ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:10:21
   |
LL |     pub unsafe impl(crate::foo) trait BazUnsafe {}
   |                     ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub unsafe impl(in crate::foo) trait BazUnsafe {}
   |                     ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:12:19
   |
LL |     pub auto impl(crate::foo) trait BazAuto {}
   |                   ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub auto impl(in crate::foo) trait BazAuto {}
   |                   ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:14:20
   |
LL |     pub const impl(crate::foo) trait BazConst {}
   |                    ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub const impl(in crate::foo) trait BazConst {}
   |                    ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:16:27
   |
LL |     pub const unsafe impl(crate::foo) trait BazConstUnsafe {}
   |                           ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub const unsafe impl(in crate::foo) trait BazConstUnsafe {}
   |                           ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:18:26
   |
LL |     pub unsafe auto impl(crate::foo) trait BazUnsafeAuto {}
   |                          ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub unsafe auto impl(in crate::foo) trait BazUnsafeAuto {}
   |                          ++

warning: the feature `impl_restriction` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/recover-incorrect-impl-restriction.rs:3:32
   |
LL | #![cfg_attr(with_gate, feature(impl_restriction))]
   |                                ^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to 6 previous errors; 1 warning emitted

